--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,32 @@
 <resources>
-    <string name="app_name">Dia do Bate Cabeca</string>
+    <string name="app_name">Bate Cabeca</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_scrolling">ScrollingActivity</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_top_tracks">#Top 10 - Mais ouvidas</string>
+    <string name="waiting">Carregando...</string>
+    <string name="title_activity_login">Login</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
+    <string name="msg_ja_existe_usuario_com_email_informado">O e-mail informado já está sendo utilizado!</string>
+    <string name="msg_a_senha_informada_e_muito_curta">A senha informada é muito curta!</string>
+    <string name="msg_credenciais_invalidas">Login e/ou senha inválidos!</string>
+    <string name="msg_erro_tentar_efetuar_login">Erro ao tentar efetuar login!</string>
+    <string name="confirmar_exclusao">Dos favoritos remover realmente você quer?</string>
+    <string name="confimar_logout">Mesmo sair você agora vai?</string>
+    <string name="msg_share_part1">Bate Cabeça com</string>
+    <string name="msg_share">Compartilhar com...</string>
 </resources>
